Class names have been changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="header">
 		<div class="logo">
-			<a href="#" class="link-logo">Sturtup</a>
+			<a href="#" class="link-logo">Startup</a>
 		</div>
 		<div class="main-menu">
 			<ul class="menu-list">
@@ -30,40 +30,40 @@
 			</div>
 		</div>
 	</div>
-	<div class="services-blok">
+	<div class="services-bloсk">
 		<div class="section-name">
-			<h2 class="section-title">services</h2>
+			<h2 class="title">services</h2>
 			<p class="description">We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
 		</div>
 		<div class="services-list">
 			<div class="services-item">
-				<div class="item">
+				<div class="icon">
 					<a href="#" class="symbol-link"><img src="images/letter-a.png" alt="Symbol" class="symbol"></a>
 					<a href="#" class="symbol-link-white"><img src="images/letter-a-white.png" alt="Symbol" class="symbol"></a>
 				</div>
-				<h3 class="title">Clean Typography</h3>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+					<h3 class="title">Clean Typography</h3>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
 			</div>
 			<div class="services-item">
-				<div class="item">
+				<div class="icon">
 					<a href="#" class="symbol-link-hooks">&#60;/&#62;</a>
 				</div>
-				<h3 class="title">Clean Typography</h3>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+					<h3 class="title">Clean Typography</h3>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
 			</div>
 			<div class="services-item">
-				<div class="item">
+				<div class="icon">
 					<a href="#" class="symbol-link"><img src="images/help.png" alt="Symbol" class="symbol"></a>
 					<a href="#" class="symbol-link-white"><img src="images/help-white.png" alt="Symbol" class="symbol"></a>
 				</div>
-				<h3 class="title">Clean Typography</h3>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+					<h3 class="title">Clean Typography</h3>
+					<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
 			</div>
 		</div>
 	</div>
 	<div class="description-organization">
 		<div class="section-name">
-			<h2 class="section-title">About us</h2>
+			<h2 class="title">About us</h2>
 			<p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
 		</div>
 		<div class="about-organization">
@@ -149,7 +149,7 @@
 	</div>
 	<div class="our-works">
 		<div class="section-name">
-			<h2 class="section-title">latest works</h2>
+			<h2 class="title">latest works</h2>
 			<div class="menu-works">
 				<ul class="works-list">
 					<li class="item"><a href="#" class="link">All</a></li>
@@ -163,7 +163,7 @@
 		<div class="work-levels">
 			<div class="level">
 				<img src="images/photo-work1.jpg" alt="Photo">
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 					<h3 class="title">Hair Dresser</h3>
 					<span class="text">Brandin</span>
@@ -172,7 +172,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work2.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -181,7 +181,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work3.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -190,7 +190,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work4.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -199,7 +199,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work5.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -208,7 +208,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work6.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -217,7 +217,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work7.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -226,7 +226,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work8.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -235,7 +235,7 @@
 			</div>
 			<div class="level">
 				<img src="images/photo-work9.jpg" alt="Photo" >
-				<div class="saturation-red"></div>
+				<div class="saturation"></div>
 				<div class="continue">
 						<h3 class="title">Hair Dresser</h3>
 						<span class="text">Brandin</span>
@@ -245,7 +245,7 @@
 		</div>
 	</div>
 	<div class="reviews">
-		<div class="saturation-red"></div>
+		<div class="saturation"></div>
 		<div class="review">
 			<span class="text">Do you like OUR WORK so far?</span>
 			<span class="text">Let's talk about YOUR PROJECT!</span>
@@ -254,7 +254,7 @@
 	</div>
 	<div class="news">
 		<div class="section-name">
-			<h2 class="section-title">recent blog posts</h2>
+			<h2 class="title">recent blog posts</h2>
 			<p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
 		</div>
 		<div class="new">
@@ -296,22 +296,22 @@
 			</div>
 		</div>
 	</div>
-	<div class="brends">
-		<div class="brend-symbols">
+	<div class="brands">
+		<div class="brand-symbols">
 			<div class="photo">
-				<img src="images/brend-photo1.png" alt="Brandin">
+				<img src="images/brand-photo1.png" alt="Brandin">
 			</div>
 			<div class="photo">
-				<img src="images/brend-photo2.png" alt="Brandin">
+				<img src="images/brand-photo2.png" alt="Brandin">
 			</div>
 			<div class="photo">
-				<img src="images/brend-photo3.png" alt="Brandin">
+				<img src="images/brand-photo3.png" alt="Brandin">
 			</div>
 			<div class="photo">
-				<img src="images/brend-photo4.png" alt="Brandin">
+				<img src="images/brand-photo4.png" alt="Brandin">
 			</div>
 			<div class="photo">
-				<img src="images/brend-photo5.png" alt="Brandin">
+				<img src="images/brand-photo5.png" alt="Brandin">
 			</div>
 		</div>
 		<div class="quote">
@@ -319,14 +319,14 @@
 			<span class="author">John Doe, Google Inc.</span>
 		</div>
 		<div class="digest-block">
-			<span class="digest-active"></span>
+			<span class="digest active"></span>
 			<span class="digest"></span>
 			<span class="digest"></span>
 		</div>
 	</div>
 	<div class="contact">
 		<div class="section-name">
-			<h2 class="section-title">get in touch</h2>
+			<h2 class="title">get in touch</h2>
 			<p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
 		</div>
 		<div class="our-contacts">
@@ -375,9 +375,9 @@
 	</div>
 	<div class="footer">
 		<div class="section-name">
-			<div class="section-title">
+			<div class="title">
 			</div>
-			<p class="description"> &#169; 2015 Startup, Designed by ShapedTheme</p>
+			<p class="copyright">&#169; 2015 Startup, Designed by ShapedTheme</p>
 		</div>
 	</div>
 </body>
