Form has been changed

--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
 	
 			</div>
 		</div>
-		<div class="latter">
-			<form id="formSubscribe">
+		<div class="letter">
+			<form class="formSubscribe">
 				<div class="form">
 					<input type="text" name="name" placeholder="your name" class="label">
 				</div>
@@ -362,7 +362,7 @@
 				<div class="form">
 					<input type="text" name="name" placeholder="company name" class="label">
 				</div>
-				<div class="form-latter">
+				<div class="form-letter">
 					<textarea placeholder="write your message" cols="100" rows="5" class="label"></textarea>
 				</div>
 				<div class="send-button">
